retrieving storage stats for currentOp blocked by slow oplog application

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1, 4.2.14
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • v4.2
    • Execution Team 2020-01-13
    • 20
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      On a secondary node, the currentOp command includes storage stats in its slow op log. If oplog application is taking too long to apply a batch of operations, this may prevent the currentOp from completing in a timely manner.

      =========

      The defect addressed here primarily involves the Parallel Batch Writer Mutex (PBWM), a logical resource that is required for oplog application on a secondary node. Prior to this fix, it was possible for the database profiler and the currentOp command to compete for the PBWM resource with secondary oplog application.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: