SERVER-44821 accessing db.system.profile and currentOp storage stats should not conflict with slow oplog application